--- a/example/example-consul-cloud/pom.xml
+++ b/example/example-consul-cloud/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-consul</artifactId>
-            <version>1.0.5</version>
+            <version>${dtp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
