--- a/example/example-nacos-cloud/pom.xml
+++ b/example/example-nacos-cloud/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-nacos</artifactId>
-            <version>1.0.5</version>
+            <version>${dtp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
