--- a/example/example-nacos/pom.xml
+++ b/example/example-nacos/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-nacos</artifactId>
-            <version>1.0.5</version>
+            <version>${dtp.version}</version>
         </dependency>
     </dependencies>
 
