--- a/example/example-zookeeper/pom.xml
+++ b/example/example-zookeeper/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
-            <version>1.0.5</version>
+            <version>${dtp.version}</version>
         </dependency>
     </dependencies>
 </project>
