--- a/adapter/adapter-rocketmq/pom.xml
+++ b/adapter/adapter-rocketmq/pom.xml
@@ -21,6 +21,14 @@
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-adapter-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
