--- a/example/example-zookeeper-cloud/pom.xml
+++ b/example/example-zookeeper-cloud/pom.xml
@@ -57,5 +57,11 @@
             <artifactId>spring-context-support</artifactId>
             <version>1.0.11</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 </project>
