--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -18,12 +18,8 @@
 
     <modules>
         <module>starter-common</module>
-        <module>starter-apollo</module>
-        <module>starter-nacos</module>
-        <module>cloud-starter-nacos</module>
-        <module>starter-zookeeper</module>
-        <module>cloud-starter-zookeeper</module>
-        <module>cloud-starter-consul</module>
+        <module>starter-configcenter</module>
+        <module>starter-adapter</module>
     </modules>
 
     <dependencies>
