--- a/starter/starter-adapter/pom.xml
+++ b/starter/starter-adapter/pom.xml
@@ -8,5 +8,18 @@
         <version>1.0.5</version>
     </parent>
 
-    <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+    <artifactId>dynamic-tp-starter-adapter</artifactId>
+    <packaging>pom</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <modules>
+        <module>starter-adapter-dubbo</module>
+        <module>starter-adapter-hystrix</module>
+        <module>starter-adapter-rocketmq</module>
+        <module>starter-adapter-webserver</module>
+    </modules>
+
 </project>
