--- a/adapter/adapter-common/pom.xml
+++ b/adapter/adapter-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-adapter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-adapter-common</artifactId>
 
