--- a/adapter/adapter-dubbo/pom.xml
+++ b/adapter/adapter-dubbo/pom.xml
@@ -5,16 +5,9 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-adapter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-adapter-dubbo</artifactId>
-
-    <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
-    </properties>
 
     <dependencies>
         <dependency>
