--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,13 +5,9 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-all</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-common</artifactId>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <dependencies>
         <dependency>
