--- a/starter/starter-adapter/pom.xml
+++ b/starter/starter-adapter/pom.xml
@@ -5,15 +5,10 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-starter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
-
     <artifactId>dynamic-tp-starter-adapter</artifactId>
     <packaging>pom</packaging>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <modules>
         <module>starter-adapter-dubbo</module>
