--- a/starter/starter-common/pom.xml
+++ b/starter/starter-common/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-starter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
-
     <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
 </project>
