--- a/starter/starter-configcenter/pom.xml
+++ b/starter/starter-configcenter/pom.xml
@@ -2,19 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-starter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>dynamic-tp-starter-configcenter</artifactId>
     <packaging>pom</packaging>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <modules>
         <module>starter-apollo</module>
@@ -29,25 +24,25 @@
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-dubbo</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-rocketmq</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-hystrix</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 </project>
