--- a/starter/starter-configcenter/starter-nacos/pom.xml
+++ b/starter/starter-configcenter/starter-nacos/pom.xml
@@ -5,11 +5,9 @@
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-starter-configcenter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
-
     <artifactId>dynamic-tp-spring-boot-starter-nacos</artifactId>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
