--- a/starter/starter-configcenter/starter-zookeeper/pom.xml
+++ b/starter/starter-configcenter/starter-zookeeper/pom.xml
@@ -2,15 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.github.lyh200</groupId>
         <artifactId>dynamic-tp-starter-configcenter</artifactId>
-        <version>1.0.6</version>
+        <version>${revision}</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
