refator notify, adapter supports notify

--- a/example/example-nacos-cloud/pom.xml
+++ b/example/example-nacos-cloud/pom.xml
@@ -70,5 +70,10 @@
             <version>1.8.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>3.0.7</version>
+        </dependency>
     </dependencies>
 </project>
