optimize adapter notify

--- a/example/example-zookeeper-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-zookeeper-cloud/src/main/resources/bootstrap.yml
@@ -25,4 +25,4 @@ dubbo:
     port: 20880
 
 rocketmq:
-  name-server: 10.17.100.26:9876;10.17.100.13:9876;10.17.100.19:9876
+  name-server: 127.0.0.1:9876
