--- a/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
+++ b/example/example-nacos/src/main/resources/dynamic-tp-nacos-demo-dtp-dev.yml
@@ -7,14 +7,12 @@ spring:
       enabledCollect: true          # 是否开启监控指标采集，默认false
       collectorType: MicroMeter     # 监控数据采集器类型（JsonLog | MicroMeter），默认logging
       logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs
-      monitorInterval: 5         # 监控时间间隔（报警判断、指标采集），默认5s
-      nacos:                     # nacos配置，不配置有默认值（规则name-dev.yml这样），cloud应用不需要配置
-        dataId: dynamic-tp-demo-dev.yml
+      monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
+      nacos:                        # nacos配置，不配置有默认值（规则name-dev.yml这样），cloud应用不需要配置
+        dataId: dynamic-tp-nacos-demo-dtp-dev.yml
         group: DEFAULT_GROUP
-      apollo:                    # apollo配置，不配置默认拿apollo配置第一个namespace
-        namespace: dynamic-tp-demo-dev.yml
-      configType: yml            # 配置文件类型
-      platforms:                 # 通知报警平台配置
+      configType: yml               # 配置文件类型
+      platforms:                    # 通知报警平台配置
         - platform: wechat
           urlKey: 3a7500-1287-4bd-a798-c5c3d8b69c  # 替换
           receivers: test1,test2                   # 接受人企微名称
