--- a/docs/package.json
+++ b/docs/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@vuepress/client": "^2.0.0-beta.46",
-    "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.46",
-    "vuepress-theme-hope": "^2.0.0-beta.79",
     "@vuepress/plugin-back-to-top": "2.0.0-beta.38",
     "@vuepress/plugin-docsearch": "2.0.0-beta.38",
     "@vuepress/plugin-nprogress": "2.0.0-beta.38",
-    "@vuepress/plugin-search": "2.0.0-beta.38"
+    "@vuepress/plugin-search": "2.0.0-beta.38",
+    "vue": "^3.2.36",
+    "vuepress": "^2.0.0-beta.46",
+    "vuepress-theme-hope": "^2.0.0-beta.79"
+  },
+  "dependencies": {
+    "pnpm": "^7.2.1"
   }
 }
