optimize adapter, support springcloud-dubbo, support MemorySafeLBQ

--- a/example/example-nacos-cloud/pom.xml
+++ b/example/example-nacos-cloud/pom.xml
@@ -46,6 +46,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>io.github.lyh200</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-nacos</artifactId>
