--- a/example/example-apollo/src/main/resources/dynamic-tp-apollo-demo-dtp.yml
+++ b/example/example-apollo/src/main/resources/dynamic-tp-apollo-demo-dtp.yml
@@ -5,7 +5,7 @@ spring:
       enabled: true
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorType: MicroMeter     # 监控数据采集器类型（JsonLog | MicroMeter），默认logging
+      collectorType: micrometer     # 监控数据采集器类型（logging | micrometer），默认logging
       logPath: /home/logs           # 监控日志数据路径，默认 ${user.home}/logs
       monitorInterval: 5            # 监控时间间隔（报警判断、指标采集），默认5s
       apollo:                       # apollo配置，不配置默认拿apollo配置第一个namespace
