--- a/example/pom.xml
+++ b/example/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>example-nacos</module>
+        <module>example-reactive-nacos</module>
         <module>example-nacos-cloud</module>
         <module>example-apollo</module>
         <module>example-zookeeper</module>
