support etcd code

--- a/starter/starter-configcenter/pom.xml
+++ b/starter/starter-configcenter/pom.xml
@@ -18,5 +18,6 @@
         <module>starter-zookeeper</module>
         <module>cloud-starter-zookeeper</module>
         <module>cloud-starter-consul</module>
+        <module>starter-etcd</module>
     </modules>
 </project>
