增加etcd配置中心使用示例

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -21,6 +21,7 @@
         <module>example-zookeeper</module>
         <module>example-zookeeper-cloud</module>
         <module>example-consul-cloud</module>
+        <module>example-etcd</module>
     </modules>
 
 </project>
