--- a/example/example-nacos-cloud/pom.xml
+++ b/example/example-nacos-cloud/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
-        <groupId>io.github.lyh200</groupId>
+        <groupId>cn.dynamictp</groupId>
         <version>1.0.8</version>
     </parent>
     <artifactId>dynamic-tp-example-nacos-cloud</artifactId>
@@ -48,25 +48,25 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-nacos</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-rocketmq</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-hystrix</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
             <version>${dtp.version}</version>
         </dependency>
