--- a/example/example-nacos/pom.xml
+++ b/example/example-nacos/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
-        <groupId>io.github.lyh200</groupId>
+        <groupId>cn.dynamictp</groupId>
         <version>1.0.8</version>
     </parent>
     <artifactId>dynamic-tp-example-nacos</artifactId>
@@ -51,7 +51,7 @@
             <version>0.2.7</version>
         </dependency>
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-nacos</artifactId>
             <version>${dtp.version}</version>
         </dependency>
