change group id

--- a/example/example-etcd/pom.xml
+++ b/example/example-etcd/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
-        <groupId>io.github.lyh200</groupId>
+        <groupId>cn.dynamictp</groupId>
         <version>1.0.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
             <version>2.5.8</version>
         </dependency>
         <dependency>
-            <groupId>io.github.lyh200</groupId>
+            <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-etcd</artifactId>
             <version>1.0.8</version>
         </dependency>
