--- a/starter/starter-extension/starter-extension-limiter-redis/pom.xml
+++ b/starter/starter-extension/starter-extension-limiter-redis/pom.xml
@@ -4,27 +4,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.dynamictp</groupId>
-        <artifactId>dynamic-tp-all</artifactId>
+        <artifactId>dynamic-tp-starter-extension</artifactId>
         <version>1.0.8</version>
     </parent>
-
-    <artifactId>dynamic-tp-extension</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>extension-skywalking</module>
-        <module>extension-limiter-redis</module>
-    </modules>
+    <artifactId>dynamic-tp-spring-boot-starter-extension-limiter-redis</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>cn.dynamictp</groupId>
-            <artifactId>dynamic-tp-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.dynamictp</groupId>
-            <artifactId>dynamic-tp-core</artifactId>
+            <artifactId>dynamic-tp-extension-limiter-redis</artifactId>
         </dependency>
     </dependencies>
+
 </project>
