--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -15,6 +15,7 @@
         <module>starter-common</module>
         <module>starter-configcenter</module>
         <module>starter-adapter</module>
+        <module>starter-extension</module>
     </modules>
 
     <dependencies>
