Notification type added email notify and use cases.

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>example-nacos</module>
         <module>example-nacos-cloud</module>
+        <module>example-nacos-notify-email</module>
         <module>example-apollo</module>
         <module>example-zookeeper</module>
         <module>example-zookeeper-cloud</module>
