add adapter common module

--- a/adapter/adapter-hystrix/pom.xml
+++ b/adapter/adapter-hystrix/pom.xml
@@ -11,6 +11,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>cn.dynamictp</groupId>
+            <artifactId>dynamic-tp-adapter-common</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
             <version>1.5.18</version>
