--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 
             <dependency>
                 <groupId>cn.dynamictp</groupId>
+                <artifactId>dynamic-tp-adapter-common</artifactId>
+                <version>${dtp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dynamictp</groupId>
                 <artifactId>dynamic-tp-adapter-webserver</artifactId>
                 <version>${dtp.version}</version>
             </dependency>
@@ -146,6 +152,12 @@
             <dependency>
                 <groupId>cn.dynamictp</groupId>
                 <artifactId>dynamic-tp-spring-boot-starter-common</artifactId>
+                <version>${dtp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dynamictp</groupId>
+                <artifactId>dynamic-tp-spring-boot-starter-adapter-common</artifactId>
                 <version>${dtp.version}</version>
             </dependency>
 
