--- a/adapter/adapter-common/pom.xml
+++ b/adapter/adapter-common/pom.xml
@@ -7,21 +7,12 @@
         <artifactId>dynamic-tp-adapter</artifactId>
         <version>1.0.8</version>
     </parent>
-    <artifactId>dynamic-tp-adapter-rocketmq</artifactId>
+    <artifactId>dynamic-tp-adapter-common</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>cn.dynamictp</groupId>
-            <artifactId>dynamic-tp-adapter-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
-            <scope>compile</scope>
-            <optional>true</optional>
+            <artifactId>dynamic-tp-core</artifactId>
         </dependency>
     </dependencies>
-
 </project>
