--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>adapter-common</module>
         <module>adapter-webserver</module>
         <module>adapter-dubbo</module>
         <module>adapter-rocketmq</module>
