--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <name>DynamicTp Project</name>
     <description>🔥🔥🔥轻量级动态线程池，内置监控告警功能，基于主流配置中心（已支持Nacos、Apollo、Zookeeper、Consul、Etcd，可通过SPI自定义实现）</description>
-    <url>https://github.com/lyh200/dynamic-tp</url>
+    <url>https://github.com/yanhom1314/dynamic-tp</url>
 
     <properties>
         <java.version>1.8</java.version>
