--- a/example/pom.xml
+++ b/example/pom.xml
@@ -17,12 +17,12 @@
     <modules>
         <module>example-nacos</module>
         <module>example-nacos-cloud</module>
-        <module>example-nacos-notify-email</module>
         <module>example-apollo</module>
         <module>example-zookeeper</module>
         <module>example-zookeeper-cloud</module>
         <module>example-consul-cloud</module>
         <module>example-etcd</module>
+        <module>example-adapter</module>
     </modules>
 
 </project>
