--- a/starter/starter-adapter/pom.xml
+++ b/starter/starter-adapter/pom.xml
@@ -16,5 +16,6 @@
         <module>starter-adapter-hystrix</module>
         <module>starter-adapter-rocketmq</module>
         <module>starter-adapter-webserver</module>
+        <module>starter-adapter-grpc</module>
     </modules>
 </project>
