--- a/example/example-etcd/pom.xml
+++ b/example/example-etcd/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.0.8</version>
+        <version>1.0.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-etcd</artifactId>
-            <version>1.0.8</version>
+            <version>${dtp.version}</version>
         </dependency>
         <dependency>
             <groupId>io.etcd</groupId>
